--- a/twig_render_this.info.yml
+++ b/twig_render_this.info.yml
@@ -1,4 +1,4 @@
 name: Twig Render This
-description: 'Render entity fields in Twig templates with simple filter.'
+description: 'This module allows you to render fields and entities in your Twig templates.'
 type: module
 core: 8.x
