--- a/twig_render_this.info.yml
+++ b/twig_render_this.info.yml
@@ -2,3 +2,4 @@ name: Twig Render This
 description: 'This module allows you to render fields and entities in your Twig templates.'
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
