--- a/tests/twig_render_this_test/twig_render_this_test.info.yml
+++ b/tests/twig_render_this_test/twig_render_this_test.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Support module for Twig Render This testing.'
 package: Testing
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:node
   - twig_render_this:twig_render_this
